Archive2/8f/5ea618af0e7e17/output
main.cpp: In function 'void func(T)':
main.cpp:5:27: error: 'isBeautiful' was not declared in this scope
     BOOST_CONCEPT_ASSERT((isBeautiful<T>))
                           ^
main.cpp:5:40: error: expected primary-expression before '>' token
     BOOST_CONCEPT_ASSERT((isBeautiful<T>))
                                        ^
main.cpp:5:41: error: expected primary-expression before ')' token
     BOOST_CONCEPT_ASSERT((isBeautiful<T>))
                                         ^
main.cpp:5:42: error: there are no arguments to 'BOOST_CONCEPT_ASSERT' that depend on a template parameter, so a declaration of 'BOOST_CONCEPT_ASSERT' must be available [-fpermissive]
     BOOST_CONCEPT_ASSERT((isBeautiful<T>))
                                          ^
main.cpp:5:42: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
main.cpp:6:1: error: expected ';' before '}' token
 }
 ^
main.cpp: At global scope:
main.cpp:10:6: error: redefinition of 'template<class T> void func(T)'
 void func(T obj)
      ^
main.cpp:3:6: note: 'template<class T> void func(T)' previously declared here
 void func(T obj)
      ^
